k8s/ddr/ddr-frontend/ddr-react-frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ddr-react-frontend-deployment
  labels:
    app: ddr-react-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ddr-react-frontend
  template:
    metadata:
      labels:
        app: ddr-react-frontend
    spec:
      containers:
        - name: ddr-react-frontend
          image: yxchia98/ddr-react-frontend:gke-1.2
          ports:
            - containerPort: 443
