k8s/ddr/ddr-frontend/ddr-react-frontend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    ingress.kubernetes.io/force-ssl-redirect: "true"
    kubernetes.io/ingress.class: contour
    kubernetes.io/tls-acme: "true"  
  name: ddr-react-frontend-ingress
  namespace: default
spec:
  rules:
  - host: ddr.gke.yxchia.me
    http:
      paths:
      - backend:
          service:
            name: ddr-react-frontend-svc
            port:
              number: 443
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - ddr.gke.yxchia.me
    secretName: ddr-react-frontend-cert
